// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify render tests actions should render sign out action 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Heading,
  HeadingProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SiteHeaderProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SiteHeader(props: SiteHeaderProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const { invokeAction } = useActions({
    signOutAction: {
      type: \\"Amplify.Auth.SignOut\\",
      parameters: { global: true },
    },
  });
  return (
    <Flex
      direction=\\"row\\"
      justifyContent=\\"space-between\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Heading
        level={1}
        children=\\"Title\\"
        {...findChildOverrides(props.overrides, \\"Heading\\")}
      ></Heading>
      <Button
        variation=\\"primary\\"
        children=\\"Log off\\"
        onClick={invokeAction(\\"signOutAction\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests basic component tests should generate a simple button component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      color=\\"#ff0000\\"
      width=\\"20\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests basic component tests should generate a simple text component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomTextProps = Partial<TextProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomText(props: CustomTextProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text
      color=\\"#ff0000\\"
      width=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Text\\")}
    >
      {\\"Text Value\\"}
    </Text>
  );
}
"
`;

exports[`amplify render tests basic component tests should generate a simple view component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type TestProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function Test(props: TestProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View
      fontFamily=\\"Times New Roman\\"
      fontSize=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"View\\")}
    ></View>
  );
}
"
`;

exports[`amplify render tests collection should render collection with data binding 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User, UserPreferences } from \\"../models\\";
import {
  Button,
  ButtonProps,
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";

export type CollectionOfCustomButtonsProps = Partial<CollectionProps<any>> & {
  width?: Number;
  backgroundColor?: String;
  buttonColor?: UserPreferences;
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionOfCustomButtons(
  props: CollectionOfCustomButtonsProps
): React.ReactElement {
  const {
    width,
    backgroundColor,
    buttonColor: buttonColorProp,
    items,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  const buttonUserFilterObj = {
    and: [
      { field: \\"age\\", operand: \\"10\\", operator: \\"gt\\" },
      { field: \\"lastName\\", operand: \\"L\\", operator: \\"beginsWith\\" },
    ],
  };
  const buttonUser =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
        }).items;
  const buttonColorFilterObj = {
    field: \\"userID\\",
    operand: \\"user@email.com\\",
    operator: \\"eq\\",
  };
  const buttonColorDataStore = useDataStoreBinding({
    type: \\"collection\\",
    model: UserPreferences,
  }).items[0];
  const buttonColor =
    buttonColorProp !== undefined ? buttonColorProp : buttonColorDataStore;
  return (
    <Collection
      type=\\"list\\"
      isPaginated={true}
      gap=\\"1.5rem\\"
      backgroundColor={backgroundColor}
      items={buttonUser || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Flex {...getOverrideProps(overrides, \\"Collection.Flex\\")}>
          <Button
            label={item.username || \\"hspain@gmail.com\\"}
            labelWidth={width}
            backgroundColor={buttonColor?.favoriteColor}
            disabled={isDisabled}
            {...getOverrideProps(overrides, \\"Collection.Flex.Button\\")}
          ></Button>
        </Flex>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests collection should render collection with data binding and sort 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import { User, UserPreferences } from \\"../models\\";
import {
  Button,
  ButtonProps,
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { SortDirection, SortPredicate } from \\"@aws-amplify/datastore\\";

export type CollectionOfCustomButtonsProps = Partial<CollectionProps<any>> & {
  width?: Number;
  backgroundColor?: String;
  buttonColor?: UserPreferences;
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionOfCustomButtons(
  props: CollectionOfCustomButtonsProps
): React.ReactElement {
  const {
    width,
    backgroundColor,
    buttonColor: buttonColorProp,
    items,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  const buttonUserFilterObj = {
    and: [
      { field: \\"age\\", operand: \\"10\\", operator: \\"gt\\" },
      { field: \\"lastName\\", operand: \\"L\\", operator: \\"beginsWith\\" },
    ],
  };
  const buttonUserPagination = {
    sort: (s: SortPredicate<User>) =>
      s.firstName(SortDirection.ASCENDING).lastName(SortDirection.DESCENDING),
  };
  const buttonUser =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
          pagination: buttonUserPagination,
        }).items;
  const buttonColorFilterObj = {
    field: \\"userID\\",
    operand: \\"user@email.com\\",
    operator: \\"eq\\",
  };
  const buttonColorDataStore = useDataStoreBinding({
    type: \\"collection\\",
    model: UserPreferences,
  }).items[0];
  const buttonColor =
    buttonColorProp !== undefined ? buttonColorProp : buttonColorDataStore;
  return (
    <Collection
      type=\\"list\\"
      isPaginated={true}
      gap=\\"1.5rem\\"
      backgroundColor={backgroundColor}
      items={buttonUser || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Flex {...getOverrideProps(overrides, \\"Collection.Flex\\")}>
          <Button
            label={item.username || \\"hspain@gmail.com\\"}
            labelWidth={width}
            backgroundColor={buttonColor?.favoriteColor}
            disabled={isDisabled}
            {...getOverrideProps(overrides, \\"Collection.Flex.Button\\")}
          ></Button>
        </Flex>
      )}
    </Collection>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests collection should render collection with data binding with no predicate 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  ListingCard,
  ListingCardProps,
  findChildOverrides,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { UntitledModel } from \\"../models\\";

export type ListingCardCollectionProps = Partial<CollectionProps<any>> & {
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ListingCardCollection(
  props: ListingCardCollectionProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const bananas =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: UntitledModel,
        }).items;
  return (
    <Collection
      isPaginated=\\"true\\"
      collectionType=\\"grid\\"
      type=\\"list\\"
      columns=\\"2\\"
      order=\\"left-to-right\\"
      items={bananas || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <ListingCard
          marginRight=\\"0\\"
          marginBottom=\\"0\\"
          marginTop=\\"0\\"
          marginLeft=\\"0\\"
          {...findChildOverrides(props.overrides, \\"ListingCard\\")}
        ></ListingCard>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests collection should render collection without data binding 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  ListingCard,
  ListingCardProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ListingCardCollectionProps = Partial<CollectionProps<any>> & {
  items?: any[];
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ListingCardCollection(
  props: ListingCardCollectionProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Collection
      type=\\"list\\"
      isPaginated=\\"true\\"
      items={items || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <ListingCard
          {...findChildOverrides(props.overrides, \\"ListingCard\\")}
        ></ListingCard>
      )}
    </Collection>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a button within a view component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a component with custom child 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  CustomButton,
  CustomButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithCustomButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithCustomButton(
  props: ViewWithCustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <CustomButton
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...findChildOverrides(props.overrides, \\"CustomButton\\")}
      ></CustomButton>
    </View>
  );
}
"
`;

exports[`amplify render tests complex component tests should generate a component with exposeAs prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests component with binding should render build property on Text 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type TextWithDataBindingProps = Partial<TextProps> & {
  textValue?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function TextWithDataBinding(
  props: TextWithDataBindingProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text
      color=\\"#ff0000\\"
      width=\\"20px\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Text\\")}
    >
      {textValue}
    </Text>
  );
}
"
`;

exports[`amplify render tests component with data binding should add model imports 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ComponentWithDataBindingProps = Partial<ButtonProps> & {
  width?: Number;
  isDisabled?: Boolean;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ComponentWithDataBinding(
  props: ComponentWithDataBindingProps
): React.ReactElement {
  const {
    width,
    isDisabled,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={buttonUser?.username || \\"hspain@gmail.com\\"}
      labelWidth={width}
      disabled={isDisabled}
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests component with data binding should not have useDataStoreBinding when there is no predicate 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { UntitledModel } from \\"../models\\";
import {
  EscapeHatchProps,
  Flex,
  FlexProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SectionHeadingProps = Partial<FlexProps> & {
  newProp6fd1?: UntitledModel;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SectionHeading(
  props: SectionHeadingProps
): React.ReactElement {
  const { newProp6fd1, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Flex
      padding=\\"0px 0px 10px 0px\\"
      backgroundColor=\\"rgb(255,255,255)\\"
      direction=\\"column\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Flex
        tes={newProp6fd1.untitledfield}
        {...getOverrideProps(overrides, \\"Flex.Flex\\")}
      >
        <Text
          fontFamily=\\"Inter\\"
          color=\\"rgb(15.539060980081558,29.73937589675188,47.8125)\\"
          textAlign=\\"left\\"
          fontSize=\\"48px\\"
          lineHeight=\\"48px\\"
          fontWeight=\\"300\\"
          {...getOverrideProps(overrides, \\"Flex.Flex.Text\\")}
        >
          {\\"Heading 2\\"}
        </Text>
      </Flex>
      <Text
        fontFamily=\\"Inter\\"
        color=\\"rgb(0,0,0)\\"
        textAlign=\\"left\\"
        fontSize=\\"32px\\"
        lineHeight=\\"48px\\"
        fontWeight=\\"400\\"
        {...getOverrideProps(overrides, \\"Flex.Text\\")}
      >
        {\\"subtitle\\"}
      </Text>
    </Flex>
  );
}
"
`;

exports[`amplify render tests component with data binding should render with data binding in child elements 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithDataBindingProps = Partial<ButtonProps> & {
  textValue?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ChildComponentWithDataBinding(
  props: ChildComponentWithDataBindingProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text {...getOverrideProps(overrides, \\"Button.Text\\")}>{textValue}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests component with variants should render variants with options provided 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Variant,
  getOverrideProps,
  getOverridesFromVariants,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  variant: \\"primary\\" | \\"secondary\\";
  size?: \\"large\\";
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const variants: Variant[] = [
    {
      variantValues: { variant: \\"primary\\" },
      overrides: { Button: { fontSize: \\"12px\\" } },
    },
    {
      variantValues: { variant: \\"secondary\\" },
      overrides: { Button: { fontSize: \\"40px\\" } },
    },
    {
      variantValues: { variant: \\"primary\\", size: \\"large\\" },
      overrides: { Button: { width: \\"500\\" } },
    },
  ];
  const overrides = {
    ...getOverridesFromVariants(variants, props),
    ...overridesProp,
  };
  return <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}></Button>;
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests concat and conditional transform should render child component with data bound concatenation 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithDataBoundConcatenationProps =
  Partial<ButtonProps> & {
    textValue?: String;
  } & {
    overrides?: EscapeHatchProps | undefined | null;
  };
export default function ChildComponentWithDataBoundConcatenation(
  props: ChildComponentWithDataBoundConcatenationProps
): React.ReactElement {
  const { textValue, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text {...getOverrideProps(overrides, \\"Button.Text\\")}>{\`\${
        buttonUser?.firstname || \\"Harrison\\"
      }\${\\" \\"}\${buttonUser?.lastname || \\"Spain\\"}\`}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render child component with static concatenation 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ChildComponentWithStaticConcatenationProps =
  Partial<ButtonProps> & {
    overrides?: EscapeHatchProps | undefined | null;
  };
export default function ChildComponentWithStaticConcatenation(
  props: ChildComponentWithStaticConcatenationProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Button {...rest} {...getOverrideProps(overrides, \\"Button\\")}>
      <Text
        {...getOverrideProps(overrides, \\"Button.Text\\")}
      >{\`\${\\"Concatenate\\"}\${\\" \\"}\${\\"Me!\\"}\`}</Text>
    </Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render component with concatenation prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  width?: Number;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const {
    width,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={\`\${buttonUser?.firstname || \\"Harrison\\"}\${\\" \\"}\${
        buttonUser?.lastname || \\"Spain\\"
      }\`}
      labelWidth={width}
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests concat and conditional transform should render component with conditional prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = Partial<ButtonProps> & {
  width?: Number;
  buttonUser?: User;
  buttonColor?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(
  props: CustomButtonProps
): React.ReactElement {
  const {
    width,
    buttonUser,
    buttonColor,
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Button
      label={\`\${buttonUser?.firstname || \\"Harrison\\"}\${\\" \\"}\${
        buttonUser?.lastname || \\"Spain\\"
      }\`}
      labelWidth={width}
      disabled={
        buttonUser?.isLoggedIn && buttonUser?.isLoggedIn === true ? true : false
      }
      prompt={
        buttonUser?.age && buttonUser?.age > 18
          ? \`\${buttonUser?.firstname}\${\\", cast your vote.\\"}\`
          : \\"Sorry you cannot vote\\"
      }
      backgroundColor={
        buttonUser?.isLoggedIn && buttonUser?.isLoggedIn === true
          ? buttonUser?.loggedInColor
          : buttonUser?.loggedOutColor
      }
      {...rest}
      {...getOverrideProps(overrides, \\"Button\\")}
    ></Button>
  );
}
"
`;

exports[`amplify render tests custom render config should render ES5 1`] = `
"var __assign =
  (this && this.__assign) ||
  function () {
    __assign =
      Object.assign ||
      function (t) {
        for (var s, i = 1, n = arguments.length; i < n; i++) {
          s = arguments[i];
          for (var p in s)
            if (Object.prototype.hasOwnProperty.call(s, p)) t[p] = s[p];
        }
        return t;
      };
    return __assign.apply(this, arguments);
  };
var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
/* eslint-disable */
import React from \\"react\\";
import { Button, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";
export default function ViewWithButton(props) {
  var overridesProp = props.overrides,
    rest = __rest(props, [\\"overrides\\"]);
  var overrides = __assign({}, overridesProp);
  return React.createElement(
    View,
    __assign({}, rest, getOverrideProps(overrides, \\"View\\")),
    React.createElement(
      Button,
      __assign(
        { color: \\"#ff0000\\", width: \\"20px\\" },
        getOverrideProps(overrides, \\"View.Button\\")
      )
    )
  );
}
"
`;

exports[`amplify render tests custom render config should render JSX 1`] = `
"var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
/* eslint-disable */
import React from \\"react\\";
import { Button, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";
export default function ViewWithButton(props) {
  const { overrides: overridesProp } = props,
    rest = __rest(props, [\\"overrides\\"]);
  const overrides = Object.assign({}, overridesProp);
  return (
    <View {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <Button
        color=\\"#ff0000\\"
        width=\\"20px\\"
        {...getOverrideProps(overrides, \\"View.Button\\")}
      ></Button>
    </View>
  );
}
"
`;

exports[`amplify render tests custom render config should render common JS 1`] = `
"\\"use strict\\";
var __rest =
  (this && this.__rest) ||
  function (s, e) {
    var t = {};
    for (var p in s)
      if (Object.prototype.hasOwnProperty.call(s, p) && e.indexOf(p) < 0)
        t[p] = s[p];
    if (s != null && typeof Object.getOwnPropertySymbols === \\"function\\")
      for (var i = 0, p = Object.getOwnPropertySymbols(s); i < p.length; i++) {
        if (
          e.indexOf(p[i]) < 0 &&
          Object.prototype.propertyIsEnumerable.call(s, p[i])
        )
          t[p[i]] = s[p[i]];
      }
    return t;
  };
var __importDefault =
  (this && this.__importDefault) ||
  function (mod) {
    return mod && mod.__esModule ? mod : { default: mod };
  };
Object.defineProperty(exports, \\"__esModule\\", { value: true });
/* eslint-disable */
const react_1 = __importDefault(require(\\"react\\"));
const ui_react_1 = require(\\"@aws-amplify/ui-react\\");
function ViewWithButton(props) {
  const { overrides: overridesProp } = props,
    rest = __rest(props, [\\"overrides\\"]);
  const overrides = Object.assign({}, overridesProp);
  return react_1.default.createElement(
    ui_react_1.View,
    Object.assign(
      {},
      rest,
      (0, ui_react_1.getOverrideProps)(overrides, \\"View\\")
    ),
    react_1.default.createElement(
      ui_react_1.Button,
      Object.assign(
        { color: \\"#ff0000\\", width: \\"20px\\" },
        (0, ui_react_1.getOverrideProps)(overrides, \\"View.Button\\")
      )
    )
  );
}
exports.default = ViewWithButton;
"
`;

exports[`amplify render tests declarations should render declarations 1`] = `
"import React from \\"react\\";
import { EscapeHatchProps, FlexProps } from \\"@aws-amplify/ui-react\\";
export declare type ProfileProps = Partial<FlexProps> & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function Profile(props: ProfileProps): React.ReactElement;
"
`;

exports[`amplify render tests default value should render bound default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type BoundDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function BoundDefaultValue(
  props: BoundDefaultValueProps
): React.ReactElement {
  const { label, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label || \\"Bound Default\\"}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render collection default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Collection,
  CollectionProps,
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
  useDataStoreBinding,
} from \\"@aws-amplify/ui-react\\";
import { User } from \\"../models\\";

export type CollectionDefaultValueProps = Partial<CollectionProps<any>> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function CollectionDefaultValue(
  props: CollectionDefaultValueProps
): React.ReactElement {
  const { items, overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const user =
    items !== undefined
      ? items
      : useDataStoreBinding({
          type: \\"collection\\",
          model: User,
        }).items;
  return (
    <Collection
      items={user || []}
      {...rest}
      {...getOverrideProps(overrides, \\"Collection\\")}
    >
      {(item, index) => (
        <Text {...getOverrideProps(overrides, \\"Collection.Text\\")}>
          {item.username || \\"Collection Default Value\\"}
        </Text>
      )}
    </Collection>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render simple and bound default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SimpleAndBoundDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SimpleAndBoundDefaultValue(
  props: SimpleAndBoundDefaultValueProps
): React.ReactElement {
  const {
    label = \\"Simple Double Default\\",
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label || \\"Bound Double Default\\"}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests default value should render simple default value 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  EscapeHatchProps,
  Text,
  TextProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SimplePropertyBindingDefaultValueProps = Partial<TextProps> & {
  label?: String;
} & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SimplePropertyBindingDefaultValue(
  props: SimplePropertyBindingDefaultValueProps
): React.ReactElement {
  const {
    label = \\"Default Binding Property\\",
    overrides: overridesProp,
    ...rest
  } = props;
  const overrides = { ...overridesProp };
  return (
    <Text {...rest} {...getOverrideProps(overrides, \\"Text\\")}>
      {label}
    </Text>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests sample code snippet tests should generate a sample code snippet for components 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  CustomButton,
  CustomButtonProps,
  EscapeHatchProps,
  View,
  ViewProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ViewWithButtonProps = Partial<ViewProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function ViewWithButton(
  props: ViewWithButtonProps
): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  return (
    <View padding-left {...rest} {...getOverrideProps(overrides, \\"View\\")}>
      <CustomButton
        color=\\"#ff0000\\"
        width=\\"20px\\"
        buttonText=\\"Click Me\\"
        {...findChildOverrides(props.overrides, \\"CustomButton\\")}
      ></CustomButton>
    </View>
  );
}
"
`;

exports[`amplify render tests should render navigation actions 1`] = `
Object {
  "componentText": "/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Heading,
  HeadingProps,
  findChildOverrides,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type SiteHeaderProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function SiteHeader(props: SiteHeaderProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const { invokeAction } = useActions({
    openAmplifyDocs: {
      type: \\"Navigation.Open\\",
      parameters: { href: \\"docs.amplify.aws\\" },
    },
    redirectToFooter: {
      type: \\"Navigation.Redirect\\",
      parameters: { href: \\"#footer-id\\", replaceHistory: true },
    },
    navigateToFAQPage: {
      type: \\"Navigation.Redirect\\",
      parameters: { href: \\"/faq\\" },
    },
    reloadPage: { type: \\"Navigation.Refresh\\" },
  });
  return (
    <Flex
      direction=\\"row\\"
      justifyContent=\\"space-between\\"
      {...rest}
      {...getOverrideProps(overrides, \\"Flex\\")}
    >
      <Heading
        level={1}
        children=\\"Title\\"
        {...findChildOverrides(props.overrides, \\"Heading\\")}
      ></Heading>
      <Button
        variation=\\"primary\\"
        children=\\"Open Amplify Docs\\"
        onClick={invokeAction(\\"openAmplifyDocs\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Navigate to FAQ Page\\"
        onClick={invokeAction(\\"navigateToFAQPage\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Reload Page\\"
        onClick={invokeAction(\\"reloadPage\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        variation=\\"primary\\"
        children=\\"Redirect To Footer (No History Update)\\"
        onClick={invokeAction(\\"redirectToFooter\\")}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
",
  "declaration": undefined,
  "renderComponentToFilesystem": [Function],
}
`;

exports[`amplify render tests theme should render the theme 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests theme should render the theme with ES5 1`] = `
"import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests theme should render the theme with TSX 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { createTheme } from \\"@aws-amplify/ui-react\\";
export default createTheme({
  name: \\"MyTheme\\",
  tokens: {
    components: {
      alert: {
        backgroundColor: \\"hsl(210, 5%, 90%)\\",
        padding: \\"0.75rem 1rem\\",
        info: { backgroundColor: \\"hsl(220, 85%, 85%)\\" },
        error: { backgroundColor: \\"hsl(0, 75%, 85%)\\" },
        warning: { backgroundColor: \\"hsl(30, 75%, 85%)\\" },
        success: { backgroundColor: \\"hsl(130, 75%, 85%)\\" },
      },
    },
  },
  overrides: [
    {
      colorMode: \\"dark\\",
      tokens: {
        colors: { black: { value: \\"#fff\\" }, white: { value: \\"#000\\" } },
      },
    },
  ],
});
"
`;

exports[`amplify render tests user specific attributes should render user specific attributes 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import {
  Button,
  ButtonProps,
  EscapeHatchProps,
  Flex,
  FlexProps,
  Image,
  ImageProps,
  getOverrideProps,
} from \\"@aws-amplify/ui-react\\";

export type ProfileProps = Partial<FlexProps> & {
  overrides?: EscapeHatchProps | undefined | null;
};
export default function Profile(props: ProfileProps): React.ReactElement {
  const { overrides: overridesProp, ...rest } = props;
  const overrides = { ...overridesProp };
  const {
    attributes: {
      username,
      picture: userImage,
      [\\"custom:favorite_icecream\\"]: customUserAttributeIcecream,
    },
  } = useAuthenticatedUser();
  return (
    <Flex {...rest} {...getOverrideProps(overrides, \\"Flex\\")}>
      <Image
        src={userImage}
        {...getOverrideProps(overrides, \\"Flex.Image\\")}
      ></Image>
      <Button
        label={username}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
      <Button
        label={customUserAttributeIcecream}
        {...getOverrideProps(overrides, \\"Flex.Button\\")}
      ></Button>
    </Flex>
  );
}
"
`;
